achievement empty fix

--- a/app/Resources/views/course_info/objectives_course/view/achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/achievement.html.twig
@@ -1,7 +1,7 @@
 {% if courseInfo.courseAchievements is empty %}
 <div class="d-flex justify-content-center align-items-center mandatory-data">
     <span class="empty-data">
-                                {{ 'app.objectives.view.skills' | trans }}
+        {{ 'app.objectives.view.empty_capacity' | trans }}
     </span>
 </div>
 {% else %}
