--- a/app/Resources/views/course_info/equipment/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/equipment.html.twig
@@ -7,7 +7,7 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>Matériel</h3>
+                    <h3>{{ 'app.equipment.view.equipment' | trans }}</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -20,9 +20,9 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>Ressources</h3>
+                    <h3>{{ 'app.equipment.view.resources' | trans }}</h3>
                     <button type="button" class="edit-button btn btn-primary rounded">
-                        Mettre à jour
+                        {{ 'app.equipment.view.edit' | trans }}
                     </button>
                 </div>
             </div>
