--- a/app/Resources/views/course_info/equipment/form/remove_resource_equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/form/remove_resource_equipment.html.twig
@@ -1,8 +1,8 @@
 {{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.equipment.delete', {'id': form.vars.data.id}), 'data-card': 'card-equipment' }}) }}
 {{ form_errors(form) }}
-<h5>Êtes-vous sûr(e) de vouloir supprimer le matériel "{{ form.vars.data.equipment.label }}" ?</h5>
+<h5>{{ 'app.equipment.form.delete_equipment' | trans({'%label%': form.vars.data.equipment.label}) }}</h5>
 <div class="d-flex justify-content-center">
-    <button type="submit" class="btn btn-danger rounded mr-2">Supprimer</button>
+    <button type="submit" class="btn btn-danger rounded mr-2">{{ 'app.equipment.form.delete' | trans }}</button>
 </div>
 {{ form_widget(form._token) }}
 {{ form_end(form) }}
