--- a/app/Resources/views/course_info/equipment/form/resource.html.twig
+++ b/app/Resources/views/course_info/equipment/form/resource.html.twig
@@ -1,24 +1,30 @@
 {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
+{{ form_errors(form) }}
 
-        {{ form_errors(form) }}
 <div class="mt-3">
     <div>
-        <label placeholder="Période (facultatif)">Ressources pédagogiques</label>
+        {{ form_label(form.educationalResources) }}
+        <small class="text-muted">
+            {{ 'app.equipment.form.educational_resources_small' | trans }}
+        </small>
         {{ form_widget(form.educationalResources) }}
     </div>
     <div class="mt-3">
-        <label class="mt-6" placeholder="En quelle(s) langue(s) est dispensé ce cours (facultatif)">Eléments bibliographiques</label>
+        {{ form_label(form.bibliographicResources) }}
+        <small class="text-muted">
+            {{ 'app.equipment.form.bibliographic_resources_small' | trans }}
+        </small>
         {{ form_widget(form.bibliographicResources) }}
     </div>
 </div>
 <div class="mt-2">
     <button type="submit" class="submit-button btn btn-primary submit rounded"
             data-url="{{ path('app.course_info.resource_equipment.resources', {'id': courseInfo.id, 'action': 'submit' }) }}">
-        Sauvegarder
+        {{ 'app.equipment.form.save' | trans }}
     </button>
     <button type="button" class="cancel-button btn btn-secondary rounded"
             data-url="{{ path('app.course_info.resource_equipment.resources', {'id': courseInfo.id, 'action': 'cancel' }) }}">
-        Annuler
+        {{ 'app.equipment.form.cancel' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
