--- a/app/Resources/views/course_info/equipment/form/resource_equipment_edit.html.twig
+++ b/app/Resources/views/course_info/equipment/form/resource_equipment_edit.html.twig
@@ -5,7 +5,7 @@
         <div>
             <div>
                 {% if form.description is defined %}
-                    {{ form_widget(form.description) }}
+                    {{ form_row(form.description) }}
                 {% endif %}
             </div>
         </div>
@@ -13,7 +13,7 @@
 </div>
 <div class="d-flex justify-content-center mt-3">
     <button type="submit" class="btn btn-primary rounded" id="create_button">
-        Ajouter
+        {{ 'app.equipment.form.add' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
