--- a/app/Resources/views/course_info/equipment/view/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/view/equipment.html.twig
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-6" style="height: 350px">
         <div class="text-center table-responsive p-0 h-100">
-            <span class="text-bold">Matériel nécessaire</span>
+            <span class="text-bold">{{ 'app.equipment.view.mandatory_equipments' | trans }}</span>
             <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th class="text-left" style="width: 80%">Description</th>
-                    <th class="text-center" style="width: 20%">Ajouter</th>
+                    <th class="text-left" style="width: 80%">{{ 'app.equipment.view.description' | trans }}</th>
+                    <th class="text-center" style="width: 20%">{{ 'app.equipment.view.add' | trans }}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -16,7 +16,7 @@
                         <td class="text-center">
                             <button type="button"
                                     class="btn btn-link modal-action button p-0"
-                                    data-action-title="Ajouter une description"
+                                    data-action-title="{{ 'app.equipment.view.add_description' | trans }}"
                                     data-action-url="{{ path('app.course_info.resource_equipment.equipment.add', {'id': courseInfo.id, 'idEquipment': equipment.id}) }}">
                                 <i class="fas fa-plus"></i>
                             </button>
@@ -30,18 +30,18 @@
     <div class="col-6" style="height: 350px">
         {% if courseInfo.courseResourceEquipments is empty %}
             <div class="text-center table-responsive p-0 h-100">
-                <span class="text-bold">Matériels choisis</span>
+                <span class="text-bold">{{ 'app.equipment.view.chosen_equipments' | trans }}</span>
                 <table class="table table-hover">
                     <thead>
                     <tr>
-                        <th class="text-left" style="width: 80%">Description</th>
-                        <th class="text-center" style="width: 20%">Supprimer</th>
+                        <th class="text-left" style="width: 80%">{{ 'app.equipment.view.description' | trans }}</th>
+                        <th class="text-center" style="width: 20%">{{ 'app.equipment.view.delete' | trans }}</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <td class="text-left">
-                            <span>Non renseigné</span>
+                            <span>{{ 'app.equipment.view.empty_data' | trans }}</span>
                         </td>
                     </tr>
                     </tbody>
@@ -49,12 +49,12 @@
             </div>
         {% else %}
             <div class="card-body text-center table-responsive p-0 h-100">
-                <span class="text-bold">Matériels choisis</span>
+                <span class="text-bold">{{ 'app.equipment.view.chosen_equipments' | trans }}</span>
                 <table class="table table-hover">
                     <thead>
                     <tr>
-                        <th class="text-left" style="width: 80%">Description</th>
-                        <th class="text-center" style="width: 20%">Modifier/Supprimer</th>
+                        <th class="text-left" style="width: 80%">{{ 'app.equipment.view.description' | trans }}</th>
+                        <th class="text-center" style="width: 20%">{{ 'app.equipment.view.update_delete' | trans }}</th>
                     </tr>
                     </thead>
                     <tbody  id="equipments-list">
@@ -68,13 +68,13 @@
                             <td class="text-center">
                                 <button type="button"
                                         class="btn btn-link modal-action p-0"
-                                        data-action-title="Modifier une description de matériel"
+                                        data-action-title="{{ 'app.equipment.view.update_equipment_description' | trans }}"
                                         data-action-url="{{ path('app.course_info.equipment.edit', {'id': resourceEquipment.id}) }}">
                                     <i class="fas fa-edit"></i>
                                 </button>
                                 <button type="button"
                                         class="btn btn-link modal-action p-0"
-                                        data-action-title="Supprimer un matériel"
+                                        data-action-title="{{ 'app.equipment.view.delete_equipment' | trans }}"
                                         data-action-url="{{ path('app.course_info.equipment.delete', {'id': resourceEquipment.id}) }}">
                                     <i class="fas fa-trash-alt text-danger"></i>
                                 </button>
