--- a/app/Resources/views/course_info/equipment/view/resource.html.twig
+++ b/app/Resources/views/course_info/equipment/view/resource.html.twig
@@ -1,10 +1,10 @@
 <div class="d-flex flex-column">
-                <span class="font-weight-bold">
-                    Ressources pédagogiques
-                </span>
+    <span class="font-weight-bold">
+        {{ 'app.equipment.view.educational_resources' | trans }}
+    </span>
     {{ courseInfo.educationalResources|humanizeEmptyData() | purify }}
     <span class="font-weight-bold">
-                    Eléments bibliographiques
-                </span>
+        {{ 'app.equipment.view.bibliographic_resources' | trans }}
+    </span>
     {{ courseInfo.bibliographicResources|humanizeEmptyData() | purify }}
 </div>
