--- a/app/Resources/views/course_info/info/info.html.twig
+++ b/app/Resources/views/course_info/info/info.html.twig
@@ -8,9 +8,9 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>Informations pratiques</h3>
+                    <h3>{{ 'app.info.view.additionnal_info' | trans }}</h3>
                     <button type="button" class="edit-button btn btn-primary rounded">
-                        Mettre à jour
+                        {{ 'app.info.view.edit' | trans }}
                     </button>
                 </div>
             </div>
