--- a/app/Resources/views/course_info/info/form/info.html.twig
+++ b/app/Resources/views/course_info/info/form/info.html.twig
@@ -1,26 +1,25 @@
 {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
-    {{ form_errors(form) }}
+{{ form_errors(form) }}
 <div class="mt-3">
     <div>
-        <label placeholder="Période (facultatif)">Indiquer toutes les informations dont vous disposez sur le
-            calendrier du cours, des examens…</label>
-        <br><span>Vous pouvez aussi partager un emploi du temps (lien web…).</span>
+        {{ form_label(form.agenda) }}
+        <small class="text-muted">
+            {{ 'app.info.form.agenda_annotation' | trans }}
+        </small>
         {{ form_widget(form.agenda) }}
     </div>
     <div class="mt-3">
-        <label class="mt-6" placeholder="En quelle(s) langue(s) est dispensé ce cours (facultatif)">Comment
-            allez-vous organiser votre cours ?</label>
-        {{ form_widget(form.organization) }}
+        {{ form_row(form.organization) }}
     </div>
 </div>
 <div class="mt-2">
     <button type="submit" class="focus-submit btn btn-primary submit rounded"
             data-url="{{ path('app.course_info.info.info', {'id': courseInfo.id, 'action': 'submit' }) }}">
-        Sauvegarder
+        {{ 'app.info.form.save' | trans }}
     </button>
     <button type="button" class="focus-cancel btn btn-secondary rounded"
             data-url="{{ path('app.course_info.info.info', {'id': courseInfo.id, 'action': 'cancel' }) }}">
-        Annuler
+        {{ 'app.info.form.cancel' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
