--- a/app/Resources/views/course_info/closing_remarks/closing_remarks.html.twig
+++ b/app/Resources/views/course_info/closing_remarks/closing_remarks.html.twig
@@ -8,9 +8,9 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>Le mot de la fin</h3>
+                    <h3>{{ 'app.closing_remarks.view.closing_remarks' | trans }}</h3>
                     <button type="button" class="edit-button btn btn-primary rounded">
-                        Mettre à jour
+                        {{ 'app.closing_remarks.view.edit' | trans }}
                     </button>
                 </div>
             </div>
