--- a/app/Resources/views/course_info/closing_remarks/view/closing_remarks.html.twig
+++ b/app/Resources/views/course_info/closing_remarks/view/closing_remarks.html.twig
@@ -1,10 +1,10 @@
 <div class="d-flex flex-column">
     <span class="font-weight-bold">
-        Message à vos étudiants
+        {{ 'app.closing_remarks.view.remarks_message' | trans }}
     </span>
     {{ courseInfo.closingRemarks|humanizeEmptyData() | purify }}
     <span class="font-weight-bold">
-        Intégrer une ressource vidéo (ou audio)
+        {{ 'app.closing_remarks.view.closing_video' | trans }}
     </span>
     <div class="embed-responsive embed-responsive-16by9">
         {{ courseInfo.closingVideo|raw  }}
