--- a/app/Resources/views/tooltip/closing_remarks_video.html.twig
+++ b/app/Resources/views/tooltip/closing_remarks_video.html.twig
@@ -1,14 +1,14 @@
 <p>
-    Afin de pouvoir intégrer une vidéo dans votre cours, veuillez vous assurer que celle-ci soit hébergée sur un serveur externe à Moodle (ex: UNSPOD, Youtube, ...). Si ce n’est pas le cas, vous pouvez demander de l’aide pour la déposer sur une de ces plateformes.
+    {{ 'app.closing_remarks.form.closing_video_info.part1' | trans }}
 </p>
 
 <p>
-    Une fois qu’elle y est stockée, vous pouvez cliquer sur “Partager / Intégrer” afin de récupérer le lien d'intégration ressemblant à :
+    {{ 'app.closing_remarks.form.closing_video_info.part2' | trans }}
 </p>
 
 <p>
-    &#60 iframe ... &#62 &#60 /iframe &#62
+    {{ 'app.closing_remarks.form.closing_video_info.part3' | trans }}
 </p>
 <p>
-    Copiez ce code et insérez-le dans le champ “Vidéo” ci-dessous. La vidéo sera visible par vos étudiants directement sur votre syllabus
+    {{ 'app.closing_remarks.form.closing_video_info.part4' | trans }}
 </p>
