--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -10,7 +10,7 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between">
                     <h3>{{ 'app.presentation.view.general.label' | trans }}</h3>
-                    <button type="button" class="edit-button btn btn-primary rounded">
+                    <button type="button" class="edit-button btn btn-primary rounded" data-title="{{ 'app.general.button.edit' | trans }}">
                         {{ 'app.general.button.edit' | trans }}
                     </button>
                 </div>
@@ -43,7 +43,7 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between">
                     <h3>{{ 'app.presentation.view.teaching_mode.label' | trans }}</h3>
-                    <button type="button" class="edit-button btn btn-primary rounded">
+                    <button type="button" class="edit-button btn btn-primary rounded" data-title="{{ 'app.general.button.edit' | trans }}">
                         {{ 'app.general.button.edit' | trans }}
                     </button>
                 </div>
