--- a/app/Resources/views/course_info/info/info.html.twig
+++ b/app/Resources/views/course_info/info/info.html.twig
@@ -9,7 +9,7 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between">
                     <h3>{{ 'app.info.view.additionnal_info' | trans }}</h3>
-                    <button type="button" class="edit-button btn btn-primary rounded">
+                    <button type="button" class="edit-button btn btn-primary rounded" data-title="{{ 'app.info.view.edit' | trans }}">
                         {{ 'app.info.view.edit' | trans }}
                     </button>
                 </div>
