--- a/app/Resources/views/course/new.html.twig
+++ b/app/Resources/views/course/new.html.twig
@@ -13,7 +13,7 @@
                 {{ form_widget(form.synchronized) }}
                 {{ form_label(form.synchronized) }}
             </div>
-            <button class="btn btn-primary">Enregistrer</button>
+            <button class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
             {{ form_end(form) }}
         </div>
     </div>
