--- a/app/Resources/views/action/_course_create.html.twig
+++ b/app/Resources/views/action/_course_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_COURSE_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.course.new')  }}">Ajouter un cours</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.course.new')  }}">{{ 'admin.button.add_course' | trans }}</a>
 {% endif %}
