admin course fix

--- a/app/Resources/views/admin_layout.html.twig
+++ b/app/Resources/views/admin_layout.html.twig
@@ -43,7 +43,7 @@
                 <div class="mb-2">
                     <a class="btn btn-primary"  href="{{ href }}">
                         <i class="fas fa-reply"></i>
-                        Revenir à la page précédente
+                        {{ 'admin.button.back' | trans }}
                     </a>
                 </div>
             {% endif %}
