--- a/app/Resources/views/course/index.html.twig
+++ b/app/Resources/views/course/index.html.twig
@@ -22,7 +22,7 @@
                     <div class="col-12">
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary">{{ 'admin.button.filter' | trans }}</button>
-                            <a class="btn btn-danger" href="{{  path('app.admin.course.index')  }}">{{ 'admin.button.filter' | trans }}</a>
+                            <a class="btn btn-danger" href="{{  path('app.admin.course.index')  }}">{{ 'admin.button.reset_filters' | trans }}</a>
                         </div>
                     </div>
                 </div>
