--- a/app/Resources/views/course/new.html.twig
+++ b/app/Resources/views/course/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Ajouter un cours' %}
+{% set h1 = 'admin.button.add_course' | trans %}
 {% set href = path('app.admin.course.index') %}
 
 {% block subContent %}
