--- a/app/Resources/views/course/index.html.twig
+++ b/app/Resources/views/course/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Liste des cours' %}
+{% set h1 = 'admin.course.list_courses' | trans %}
 {% block subContent %}
 
     <div class="card">
