--- a/app/Resources/views/dashboard/index.html.twig
+++ b/app/Resources/views/dashboard/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Tableau de bord des syllabus' %}
+{% set h1 = 'admin.dashboard.syllabus_dashboard' | trans %}
 {% block subContent %}
     <div class="card">
         <div class="card-header">
