--- a/app/Resources/views/action/_critical_achievement_create.html.twig
+++ b/app/Resources/views/action/_critical_achievement_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_CRITICAL_ACHIEVEMENT_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.critical_achievement.new')  }}">Ajouter un apprentissage critique</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.critical_achievement.new')  }}">{{ 'admin.button.add_critical_achievement' | trans }}</a>
 {% endif %}
