--- a/app/Resources/views/activity/new.html.twig
+++ b/app/Resources/views/activity/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Ajouter une activité' %}
+{% set h1 = 'admin.button.add_critical_achievement' | trans %}
 {% set href = path('app.admin.activity.index') %}
 
 {% block subContent %}
@@ -16,7 +16,7 @@
             <!-- /.card-body -->
 
             <div class="card-footer">
-                <button type="submit" class="btn btn-primary">Enregistrer</button>
+                <button type="submit" class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
             </div>
         {{ form_end(form) }}
     </div>
