--- a/app/Resources/views/course/edit.html.twig
+++ b/app/Resources/views/course/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Modifier un cours' %}
+{% set h1 = 'admin.course.edit_course' | trans %}
 {% set href = path('app.admin.course.index') %}
 
 {% block subContent %}
