--- a/app/Resources/views/action/_activity_mode_create.html.twig
+++ b/app/Resources/views/action/_activity_mode_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_ACTIVITYMODE_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.activity_mode.new')  }}">Ajouter un mode d'activité</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.activity_mode.new')  }}">{{ 'admin.button.add_activity_mode' | trans }}</a>
 {% endif %}
