admin campus + filters

--- a/app/Resources/views/campus/edit.html.twig
+++ b/app/Resources/views/campus/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Modifier un campus' %}
+{% set h1 = 'admin.campus.edit_campus' | trans %}
 {% set href = path('app.admin.campus.index') %}
 
 {% block subContent %}
@@ -23,7 +23,7 @@
         <!-- /.card-body -->
 
         <div class="card-footer">
-            <button type="submit" class="btn btn-primary">Enregistrer</button>
+            <button type="submit" class="btn btn-primary">{{ 'admin.button.edit' | trans }}</button>
         </div>
         {{ form_end(form) }}
     </div>
