--- a/app/Resources/views/action/_domain_create.html.twig
+++ b/app/Resources/views/action/_domain_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_DOMAIN_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.domain.new')  }}">Ajouter un domaine</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.domain.new')  }}">{{ 'admin.button.add_domain' | trans }}</a>
 {% endif %}
