--- a/app/Resources/views/domain/index.html.twig
+++ b/app/Resources/views/domain/index.html.twig
@@ -1,11 +1,9 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Liste des domaines' %}
+{% set h1 = 'admin.domain.list_domains' | trans %}
 {% block subContent %}
 
     <div class="card">
-
         <div class="card-body">
-
             <div class="d-flex justify-content-end pb-3">
                 {% include 'action/_domain_create.html.twig' %}
             </div>
@@ -18,14 +16,14 @@
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <div class="form-group">
-                            {{ form_label(form.structures.label, 'Structures') }}
+                            {{ form_label(form.structures.label, 'admin.domain.structure') }}
                             {{ form_widget(form.structures.label) }}
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary">Filtrer</button>
-                            <a class="btn btn-danger" href="{{  path('app.admin.domain.index')  }}">Réinitialiser les filtres</a>
+                            <button type="submit" class="btn btn-primary">{{ 'admin.button.filter' | trans }}</button>
+                            <a class="btn btn-danger" href="{{  path('app.admin.domain.index')  }}">{{ 'admin.button.reset_filters' | trans }}</a>
                         </div>
                     </div>
                 </div>
@@ -38,7 +36,7 @@
                     <thead>
                     <tr>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.label'|trans, 'a.label') }}</th>
-                        <th>Structure</th>
+                        <th>{{ 'admin.domain.structure' | trans }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.obsolete'|trans, 'a.obsolete') }}</th>
                     </tr>
                     </thead>
