niveau lié a une structure

--- a/app/Resources/views/level/edit.html.twig
+++ b/app/Resources/views/level/edit.html.twig
@@ -11,6 +11,7 @@
         <div class="card-body">
 
             {{ form_row(form.label) }}
+            {{ form_row(form.structures) }}
             <div class="custom-control custom-switch">
                 {{ form_row(form.obsolete) }}
             </div>
