champ "groupe" dans domaine et campus

--- a/app/Resources/views/campus/edit.html.twig
+++ b/app/Resources/views/campus/edit.html.twig
@@ -11,6 +11,7 @@
         <div class="card-body">
 
             {{ form_row(form.label) }}
+            {{ form_row(form.grp) }}
             <div class="custom-control custom-switch">
                 {{ form_widget(form.synchronized) }}
                 {{ form_label(form.synchronized) }}
