--- a/app/Resources/views/campus/new.html.twig
+++ b/app/Resources/views/campus/new.html.twig
@@ -10,6 +10,7 @@
         {{ form_start(form) }}
         <div class="card-body">
             {{ form_row(form.label) }}
+            {{ form_row(form.grp) }}
             <div class="custom-control custom-switch">
                 {{ form_widget(form.synchronized) }}
                 {{ form_label(form.synchronized) }}
