--- a/app/Resources/views/domain/index.html.twig
+++ b/app/Resources/views/domain/index.html.twig
@@ -37,6 +37,7 @@
                     <tr>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.label'|trans, 'a.label') }}</th>
                         <th>{{ 'admin.domain.structure' | trans }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.grp'|trans, 'l.grp') }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.obsolete'|trans, 'a.obsolete') }}</th>
                     </tr>
                     </thead>
@@ -54,6 +55,9 @@
                                 {% for structure in domain.structures %}
                                     {{ not loop.first ? ', ' }}{{ structure }}
                                 {% endfor %}
+                            </td>
+                            <td>
+                                {{ domain.grp }}
                             </td>
                             <td>
                                 {{ domain.obsolete|humanizeBoolean }}
