--- a/app/Resources/views/domain/new.html.twig
+++ b/app/Resources/views/domain/new.html.twig
@@ -10,6 +10,7 @@
         {{ form_start(form) }}
         <div class="card-body">
             {{ form_row(form.label) }}
+            {{ form_row(form.grp) }}
             {{ form_row(form.structures) }}
         </div>
         <!-- /.card-body -->
