--- a/app/Resources/views/action/_language_create.html.twig
+++ b/app/Resources/views/action/_language_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_LANGUAGE_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.language.new')  }}">Ajouter une langue</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.language.new')  }}">{{ 'admin.button.add_language' | trans }}</a>
 {% endif %}
