--- a/app/Resources/views/action/_level_create.html.twig
+++ b/app/Resources/views/action/_level_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_LEVEL_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.level.new')  }}">Ajouter un niveau</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.level.new')  }}">{{ 'admin.button.add_level' | trans }}</a>
 {% endif %}
