--- a/app/Resources/views/action/_period_create.html.twig
+++ b/app/Resources/views/action/_period_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_PERIOD_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.period.new')  }}">Ajouter une période</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.period.new')  }}">{{ 'admin.button.add_period' | trans }}</a>
 {% endif %}
