--- a/app/Resources/views/action/_structure_create.html.twig
+++ b/app/Resources/views/action/_structure_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_STRUCTURE_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.structure.new')  }}">Ajouter une structure</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.structure.new')  }}">{{ 'admin.button.add_structure' | trans }}</a>
 {% endif %}
