--- a/app/Resources/views/period/edit.html.twig
+++ b/app/Resources/views/period/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Modifier une période' %}
+{% set h1 = 'admin.period.edit_period' | trans %}
 {% set href = path('app.admin.period.index') %}
 
 {% block subContent %}
@@ -20,7 +20,7 @@
         <!-- /.card-body -->
 
         <div class="card-footer">
-            <button type="submit" class="btn btn-primary">Enregistrer</button>
+            <button type="submit" class="btn btn-primary">{{ 'admin.button.edit' | trans }}</button>
         </div>
         {{ form_end(form) }}
     </div>
