--- a/app/Resources/views/structure/edit.html.twig
+++ b/app/Resources/views/structure/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Modifier une structure' %}
+{% set h1 = 'admin.structure.edit_structure' | trans %}
 {% set href = path('app.admin.structure.index') %}
 
 {% block subContent %}
@@ -22,7 +22,7 @@
         <!-- /.card-body -->
 
         <div class="card-footer">
-            <button type="submit" class="btn btn-primary">Modifier</button>
+            <button type="submit" class="btn btn-primary">{{ 'admin.button.edit' | trans }}</button>
         </div>
         {{ form_end(form) }}
     </div>
