--- a/app/Resources/views/structure/new.html.twig
+++ b/app/Resources/views/structure/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Ajouter une structure' %}
+{% set h1 = 'admin.button.add_structure' | trans%}
 {% set href = path('app.admin.structure.index') %}
 
 {% block subContent %}
@@ -12,7 +12,7 @@
                     {{ form_widget(form.synchronized) }}
                     {{ form_label(form.synchronized) }}
                 </div>
-                <button class="btn btn-primary">Enregistrer</button>
+                <button class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
             {{ form_end(form) }}
         </div>
     </div>
