--- a/app/Resources/views/import/_fields_allowed.html.twig
+++ b/app/Resources/views/import/_fields_allowed.html.twig
@@ -1,10 +1,10 @@
 <table class="table table-sm">
     <thead>
     <tr>
-        <th>Nom</th>
-        <th>Obligatoire</th>
-        <th>Valeurs autorisées</th>
-        <th>Description</th>
+        <th>{{ 'admin.import.name' | trans }}</th>
+        <th>{{ 'admin.import.mandatory' | trans }}</th>
+        <th>{{ 'admin.import.authorized_value' | trans }}</th>
+        <th>{{ 'admin.import.description' | trans }}</th>
     </tr>
     </thead>
     <tbody>
